@@ -1,5 +1,7 @@
 2005-11-20  Russell Bryant  <russell@digium.com>
 
+	* channels/chan_sip.c channels/chan_iax2.c: Change warning messages about the number of scheduled events happening all at once to debug messages. (issue #5794)
+
 	* pbx/pbx_spool.c: Fix crash when a value is not specified with a variable on a Set: line in a call file. (issue #5806)
 
 	* apps/app_meetme.c: Fix the 'X' option to the MeetMe application. (issue #5773)
